backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 34.47.87.26
  selector:
    app: backend
  ports:
    - port: 8080              # 클러스터 내부에서 서비스 접근용 포트
      targetPort: 8080      # 백엔드 컨테이너가 실제로 사용하는 포트
      protocol: TCP
