backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
    - host: ddak-dae.kro.kr
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
